--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "recharts": "^2.10.3",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.7",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "vite": "^5.0.7"
   },
   "scripts": {
     "dev": "vite",
