--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.13.2",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.2",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
